--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,6 +25,10 @@
             android:name="com.coolweather.app.activity.WeatherActivity">
             
         </activity>
+        <service 
+            android:name=".service.AutoUpdateService"></service>
+        <receiver 
+            android:name=".receiver.AutoUpdateReceiver"></receiver>
     </application>
 
 </manifest>
