--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,12 +8,27 @@
 	
     <uses-permission android:name="android.permission.INTERNET"/>
     
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.INTERNET"/>
+	<uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
+	<uses-permission android:name="android.permission.WAKE_LOCK"/>
+	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name="android.permission.GET_TASKS" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    
     <application
         android:icon="@drawable/logo"
         android:label="@string/app_name" >
+        
+        <meta-data 
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="GqZNNh1zsBG3EAgie55vZGKUiPWWoDQf"/>
+        
         <activity
             android:label="@string/app_name"
-            android:name="com.coolweather.app.activity.ChooseAreaActivity" >
+            android:name="com.coolweather.app.activity.MapActivity" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,6 +38,10 @@
         
         <activity 
             android:name="com.coolweather.app.activity.WeatherActivity">
+            
+        </activity>
+        <activity 
+            android:name="com.coolweather.app.activity.ChooseAreaActivity">
             
         </activity>
         <service 
